move style properties

--- a/example.html
+++ b/example.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
 <title>GIT TUTORIAL</title>
+<style>
+  h1{
+    color: blue;
+  }
+</style>
 </head>
 <body>
-  <h1 style="color:red;">Welcom to My website</h1>
   <h2>Hello</h2>
   GITHUB IS HERE!
 </body>
